# cargo-open

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  flake.nix
src/: main.rs
